# chunksmith

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  yoyo.ini
.github/workflows/: ci.yml
app/: db_healthcheck.py  main.py
app/api/: deps.py  documents.py  health.py  ingest.py  jobs.py  models.py
app/core/: config.py  logging.py  metrics.py  middleware.py  redis_client.py
app/db/: chunks.py  documents.py  jobs.py  session.py
app/services/: ingestion.py
app/workers/: hooks.py  worker.py
migrations/versions/: 0001_initial_schema.sql
tests/: test_ingestion_flow.py
